...
import com.cvshealth.accessibility.apps.composeaccessibilitytechniques.ui.theme.ComposeAccessibilityTechniquesTheme
import kotlinx.coroutines.delay

const val uxChangeAnnouncementsHeadingTestTag = "uxChangeAnnouncementsHeading"
const val uxChangeAnnouncementsExample1HeadingTestTag = "uxChangeAnnouncementsExample1Heading"
const val uxChangeAnnouncementsExample1LiveRegionTextTestTag = "uxChangeAnnouncementsExample1LiveRegionText"
const val uxChangeAnnouncementsExample1IncrementCounterTestTag = "uxChangeAnnouncementsExample1IncrementCounter"
const val uxChangeAnnouncementsExample1ResetCounterTestTag = "uxChangeAnnouncementsExample1ResetCounter"
const val uxChangeAnnouncementsExample2HeadingTestTag = "uxChangeAnnouncementsExample2Heading"
const val uxChangeAnnouncementsExample2ButtonTestTag = "uxChangeAnnouncementsExample2Button"
const val uxChangeAnnouncementsExample2LiveRegionTextTestTag = "uxChangeAnnouncementsExample2LiveRegionText"
const val uxChangeAnnouncementsExample3HeadingTestTag = "uxChangeAnnouncementsExample3Heading"
const val uxChangeAnnouncementsExample3ButtonTestTag = "uxChangeAnnouncementsExample3Button"
const val uxChangeAnnouncementsExample3ProgressIndicatorTestTag = "uxChangeAnnouncementsExample3LiveRegionText"
const val uxChangeAnnouncementsExample4HeadingTestTag = "uxChangeAnnouncementsExample4Heading"
const val uxChangeAnnouncementsExample4ButtonTestTag = "uxChangeAnnouncementsExample4Button"
const val uxChangeAnnouncementsExample4AlertTestTag = "uxChangeAnnouncementsExample4LiveRegionText"

/**
 * Demonstrate accessibility techniques for UX change announcements in conformance to WCAG
 * [Success Criterion 4.1.3 Status Messages](https://www.w3.org/TR/WCAG22/#status-messages).
 *
 * Applies [GenericScaffold] to wrap the screen content.
...
