...
    <!-- Scrolling interactive columns -->
    <string name="scrolling_interactive_columns_title">Scrolling interactive columns</string>
    <string name="scrolling_interactive_columns_heading">Scrolling interactive columns requires keyboard remediation</string>
    <string name="scrolling_interactive_columns_description_1">Columns containing interactive content can be made keyboard accessible with specific remediations for scrolling. First, the Column must be "focusable". Second, the Column must have a visible focus indicator.</string>
    <string name="scrolling_interactive_columns_description_2">Attach an external keyboard, tab to the content area, then scroll the list using the Page Up and Page Down keys.</string>
    <string name="scrolling_interactive_columns_example_1_header">Good example 1: Remediated scrolling interactive column</string>
    <string name="scrolling_interactive_columns_item_1">Apple</string>
    <string name="scrolling_interactive_columns_item_2">Apricot</string>
    <string name="scrolling_interactive_columns_item_3">Banana</string>
    <string name="scrolling_interactive_columns_item_4">Blueberry</string>
    <string name="scrolling_interactive_columns_item_5">Cherry</string>
    <string name="scrolling_interactive_columns_item_6">Date</string>
    <string name="scrolling_interactive_columns_item_7">Durian</string>
    <string name="scrolling_interactive_columns_item_8">Elderberry</string>
    <string name="scrolling_interactive_columns_item_9">Fig</string>
    <string name="scrolling_interactive_columns_item_10">Grape</string>
    <string name="scrolling_interactive_columns_item_11">Guava</string>
...
