...

const val modalBottomSheetLayoutsHeadingTestTag = "modalBottomSheetLayoutsHeading"
const val modalBottomSheetLayoutsExample1HeadingTestTag = "modalBottomSheetLayoutsExample1Heading"
const val modalBottomSheetLayoutsExample1Button1TestTag = "modalBottomSheetLayoutsExample1Button1"
const val modalBottomSheetLayoutsExample1Button2TestTag = "modalBottomSheetLayoutsExample1Button2"
const val modalBottomSheetLayoutsExample1SelectedItemTestTag = "modalBottomSheetLayoutsExample1SelectedItem"
const val modalBottomSheetLayoutsExampleSheetTestTag = "modalBottomSheetLayoutsExampleSheet"
const val modalBottomSheetLayoutsExampleSheetTitleTestTag = "modalBottomSheetLayoutsExampleSheetTitle"

/**
 * Demonstrate accessibility techniques for [ModalBottomSheet] layouts.
 *
 * Applies [GenericScaffold] to wrap the screen content.
...
